--- a/static/html/index.html
+++ b/static/html/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="/app.js"></script>
     <script type="text/javascript" src="/js/net.min.js"></script>
     <link rel="icon" href="/images/kittur.png">
+
+    <script type='text/javascript'>(function(){var gs=document.createElement('script');gs.src='https://snippet.growsumo.com/growsumo.min.js';gs.type='text/javascript';gs.async ='true';gs.onload=gs.onreadystatechange=function(){var rs=this.readyState;if(rs&&rs!='complete'&&rs!='loaded')return;try{growsumo._initialize('pk_b3701ce300614aa0bd7497de3d1952e1');}catch(e){}};var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(gs,s);})();</script>
 </head>
 
 <body>
@@ -112,13 +114,11 @@
                             <img src="http://www.tortue.me/emoji/scream_cat.png" width="50">
                             Meeow!
                         </div>
-                        Your kittens are being shoved into cardboard boxes and on their way to your doorstep
+                        Your kittens are being shoved into cardboard boxes and are on their way to your doorstep
                     </h4>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
