--- a/static/html/index.html
+++ b/static/html/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="/app.js"></script>
     <script type="text/javascript" src="/js/net.min.js"></script>
     <link rel="icon" href="/images/kittur.png">
+
+    <script type='text/javascript'>(function(){var gs=document.createElement('script');gs.src='https://snippet.growsumo.com/growsumo.min.js';gs.type='text/javascript';gs.async ='true';gs.onload=gs.onreadystatechange=function(){var rs=this.readyState;if(rs&&rs!='complete'&&rs!='loaded')return;try{growsumo._initialize('pk_f92f0f59f9484089afe551ab7bbf6d59');}catch(e){}};var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(gs,s);})();</script>
 </head>
 
 <body>
@@ -118,7 +120,9 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <a href="https://test-3.growsumo.com/app/page">Partners</a>
+    </footer>
 </body>
 
 </html>
