--- a/static/html/index.html
+++ b/static/html/index.html
@@ -14,6 +14,7 @@
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <script type="text/javascript" src="/app.js"></script>
     <script type="text/javascript" src="/js/net.min.js"></script>
+    <script type='text/javascript'>(function(){var gs=document.createElement('script');gs.src='https://snippet.growsumo.com/growsumo.min.js';gs.type='text/javascript';gs.async ='true';gs.onload=gs.onreadystatechange=function(){var rs=this.readyState;if(rs&&rs!='complete'&&rs!='loaded')return;try{growsumo._initialize('pk_gW4QqVzM4nxIuJoXq9sK0913CGpuMkNW');}catch(e){}};var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(gs,s);})();</script>
     <link rel="icon" href="/images/kittur.png">
 </head>
 
