partners link added to header

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -24,6 +24,7 @@
             <img src="/images/kittur.svg" style="padding:3rem 1rem; width:40px;" />
         </div>
         <div class="four columns" style="padding:3rem 1rem;">
+            <a href=https://kittur-2.growsumo.com/app/page>Partners</a>
             <span id="users_name_profile"></span>
         </div>
     </div>
